Data/Results/RQ2/leak/aseprite/infer-analyze/report.txt
#0
/home/zhh/inject/leak/aseprite/src/app/ui/timeline/timeline.cpp:1913: error: Dead Store
  The value written to &j (type int) is never used.
  1911.   i = base::clamp(i, firstLayer(), lastLayer());
  1912. 
  1913.   layer_t j = lastLayer() - viewScroll().y / layerBoxHeight();;
          ^
  1914.   if (!m_rows.empty())
  1915.     j = base::clamp(j, firstLayer(), lastLayer());

#1
/home/zhh/inject/leak/aseprite/src/app/ui/timeline/timeline.cpp:2423: error: Dead Store
  The value written to &band (type int) is never used.
  2421.   for (int pass=0; pass<passes; ++pass) {
  2422.     for (Tag* tag : m_sprite->tags()) {
  2423.       int band = -1;
              ^
  2424.       if (m_tagFocusBand >= 0) {
  2425.         auto it = m_tagBand.find(tag);

#2
/home/zhh/inject/leak/aseprite/src/app/ui/timeline/timeline.cpp:2523: error: Uninitialized Value
  The value read from info.styleFlags was never initialized.
  2521.     PaintWidgetPartInfo info;
  2522.     if (m_hot.part == PART_TAG_SWITCH_BAND_BUTTON) {
  2523.       info.styleFlags |= ui::Style::Layer::kMouse;
              ^
  2524.       if (hasCapture())
  2525.         info.styleFlags |= ui::Style::Layer::kSelected;

Found 3 issues
                Issue Type(ISSUED_TYPE_ID): #
                    Dead Store(DEAD_STORE): 2
  Uninitialized Value(UNINITIALIZED_VALUE): 1
